[package]
name = "my-rust-wasm"
version = "0.1.0"
edition = "2021"
authors = ["yjw"]
description = "sign-wasm"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.1.1", features = ["alloc"] }
base64 = "0.22.1"
sha1 = "0.10.6"
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
